2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Create error message if unvalid verbosity
	value is detected. Reset wrong value to maximum limit.

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* README.loconet: New document that describes some
	loconet specific stuff.

2009-06-28 Matthias Trute <mtrute@users.sourceforge.net>
	* loconet.c: improved loconet communication, internal code 
	cleanups

2009-06-24 Guido Scholz <guido.scholz@bayernline.de>
	* clientservice.c, srcp-server.h, srcpd.c: Improved server
	message string handling.
	* srcpd.c: Report error, if chdir() fails.

2009-06-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, io.*: Removed sys/param.h dependency. Fixed
	compiler warning.

2009-01-31 Guido Scholz <guido.scholz@bayernline.de>
	* zimo.c: Support for GA switching added. Thread event loop
	design cleaned up. New Copyright/License header according to GPL
	rules (http://www.fsf.org/licensing/licenses/gpl-howto.html).
	* dcc-address.*: Basic functions to map address/port values
	between NMRA and Lenz-DCC address scheme added.
	* ddl.c, ddl-s88.c, hsi-88.c, i2c-dev.c, ib.c, li100.c,
	loconet.c, loopback.c, m605x.c, selectrix.c, zimo.c,
	config-srcpd.c: Harmonized usage of "comment" tag.

2009-01-26 Guido Scholz <guido.scholz@bayernline.de>
	* loopback.c: Cleaner design for bus thread event loop applied.

2009-01-24 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.*, ib.*, io.*, zimo.c: Support for circumvention
	of Intellibox BIBA function added to to speed up connection
	initialization if user configures the proper baudrate in
	srcpd.conf.
	* ib.c: Very basic support added to print firmware version to
	syslog.

2009-01-21 Guido Scholz <guido.scholz@bayernline.de>
	* config-srcpd.c: Fixed counting of interface bus number,
	reported by Heiko Gau.
	* ddl.c, ddl_maerklin.c, ddl_nmra.c, ddl-s88.c, hsi-88.c,
	i2c-dev.c, ib.c, li100.c, loconet.c, loopback.c, m605x.c,